# fractals

./: .dockerignore  .eslintrc.js  .prettierrc  .space.kts  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json
public/: fractal.worker.js  index.html  pwa.webmanifest
src/: App.tsx  index.css  index.tsx  service-worker.ts  serviceWorkerRegistration.ts  setupTests.ts
src/App/: index.css  index.tsx
src/classes/: ComplexNumber.ts  index.ts
src/components/: index.ts
src/components/BottomPanel/: BottomPanel.tsx  styles.scss
src/components/Canvas/: Canvas.tsx  hooks.ts  styles.scss
src/components/Fractal/: Fractal.tsx  index.css  index.scss  styles.scss
src/components/SideBar/: SideBar.tsx  styles.scss
src/enums/: CalculationProvider.ts  Fratcal.ts  ServiceWorkerMessageType.ts  WorkerReturnMessageType.ts  index.ts
src/interfaces/: CalculationProviderOptions.ts  FlexLayoutProps.ts  FractalOptions.ts  WorkerMessage.ts  WorkerReturnMessage.ts  index.ts  utils.ts
src/models/: index.ts
src/models/Drawer/: index.ts
src/models/Fractal/: index.ts
src/models/drawer/: index.ts
src/models/fractal/: index.ts
src/styles/: breakpoints.module.scss  common.module.scss  transition.scss
src/styles/common/: shadows.scss
src/types/: fontawesome-macro.d.ts
src/utils/: hooks.ts  index.ts  notifications.ts  screenSizeUtils.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
src/wasm/src/iterators/: julia.rs  mandelbrot.rs
src/webWorker/: index.js  index.ts
(+13 files in other folders)
