[package]
name = "rust_wasm"
version = "0.1.0"
authors = ["Mark Rikhter <markrihter98@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4.2"
wasm-bindgen = "0.2.83"
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
